--- a/jobportal/src/main/resources/application.properties
+++ b/jobportal/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=jobportal
+spring.datasource.url=jdbc:mysql://localhost:3306/your_database
+spring.datasource.username=your_username
+spring.datasource.password=your_password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
