--- a/jobportal/src/main/resources/application.properties
+++ b/jobportal/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.application.name=jobportal
-spring.datasource.url=jdbc:mysql://localhost:3306/your_database
-spring.datasource.username=your_username
-spring.datasource.password=your_password
+
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/jobportal
+spring.datasource.username=root
+spring.datasource.password=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate (JPA) Settings
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.show-sql=true
